refactor: 重构包结构和应用品牌相关配置
将包名从com.camera.app更改为com.pipiqiang.qcamera.app
更新应用名称为"皮皮强相机"
修改应用图标和品牌相关资源
更新AndroidManifest中的组件路径和广播action
调整gradle配置中的namespace和applicationId

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">定时拍照助手</string>
+    <string name="app_name">皮皮强相机</string>
     <string name="title_activity_settings">设置</string>
     
     <!-- 首页相关 -->
